#28 - Bump loomjetty to support Java 18 Loom preview