@@ -12,13 +12,13 @@
 
   <artifactId>avaje-jex-loomjetty</artifactId>
   <groupId>io.avaje</groupId>
-  <version>1.0</version>
+  <version>1.1</version>
 
   <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-    <javadoc.source>17</javadoc.source>
-    <java.release>17</java.release>
+    <maven.compiler.source>18</maven.compiler.source>
+    <maven.compiler.target>18</maven.compiler.target>
+    <javadoc.source>18</javadoc.source>
+    <java.release>18</java.release>
     <jetty.version>11.0.7</jetty.version>
   </properties>
 
@@ -35,6 +35,18 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <release>18</release>
+          <compilerArgs>
+            --enable-preview
+          </compilerArgs>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.moditect</groupId>
         <artifactId>moditect-maven-plugin</artifactId>
